[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/characters/player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/player/idle.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/player/attack_1.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/player/attack_2.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/player/attack_3.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/player/walk_1.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/player/walk_2.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/player/walk_3.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/player/walk_4.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/player/hit_1.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/player/hit_2.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/player/strike_1.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/player/strike_2.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/player/strike_3.png" type="Texture" id=14]
[ext_resource path="res://scenes/hud/Health.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/hud/HUD.tscn" type="PackedScene" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.25557, 8.19391 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": false,
"name": "attack",
"speed": 12.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "hit",
"speed": 12.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "strike",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( -0.583977, 0.291992 )
z_index = 3
collision_mask = 4
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.00136e-05 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "idle"

[node name="AttackRange" type="RayCast2D" parent="AnimatedSprite"]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 25 )
collision_mask = 2

[node name="Position" type="Position2D" parent="AnimatedSprite"]
position = Vector2( 7.88679, 0 )

[node name="HealthCooldown" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="HUD" parent="." instance=ExtResource( 15 )]
position = Vector2( -28.0681, -34.2609 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 16 )]

[node name="Button" type="Button" parent="."]
visible = false
margin_left = -22.1532
margin_top = 17.3633
margin_right = 28.8468
margin_bottom = 37.3633
text = "power"

[connection signal="health_changed" from="." to="HUD" method="change_health"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
[connection signal="timeout" from="HealthCooldown" to="." method="_on_HealthCooldown_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
